gccida/c3/find_edge_index
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_edge_index/src/cfganal.c:1151:20: error: expected expression
while ( *( _OWORD *)&edge_list->index_to_edge[v4]->src != __PAIR128__( ( unsigned __int64)succ, ( unsigned __int64)pred) ) 
                   ^
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_edge_index/src/cfganal.c:1151:12: error: use of undeclared identifier '_OWORD'
while ( *( _OWORD *)&edge_list->index_to_edge[v4]->src != __PAIR128__( ( unsigned __int64)succ, ( unsigned __int64)pred) ) 
           ^
2 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/find_edge_index/src/obj/cfganal.o] Error 1
